<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_main"
    android:layout_gravity="center"
    tools:context="com.example.learningharmonizer.MenuActivity">

        <ImageButton
            android:id="@+id/Log_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@mipmap/log"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/Account"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/account_manage"
            tools:ignore="ContentDescription"
            android:visibility="invisible"/>


        <ImageButton
            android:id="@+id/contact"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_baseline_email_24"
            android:contentDescription="@string/todo">

        </ImageButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MENU"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:typeface="serif"
            android:textStyle="bold"
            android:layout_alignTop="@+id/btt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-120dp"
            tools:ignore="HardcodedText" />


        <ImageButton
            android:id="@+id/btt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/saving_btt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-100dp"
            android:background="@drawable/test"
            android:contentDescription="@string/todo"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageButton
            android:id="@+id/saving_btt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginVertical="300dp"
            android:background="@drawable/test"
            android:contentDescription="@string/todo"
            android:text="@string/recorded_musical_score" />

        <ImageButton
            android:id="@+id/info_btt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/saving_btt"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-100dp"
            android:background="@drawable/test"
            android:contentDescription="@string/todo"
            android:text="@string/recorded_musical_score" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/info_btt"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/information"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="serif"
            tools:ignore="RelativeOverlap">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/saving_btt"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/sauvegarde"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="serif"
            tools:ignore="RelativeOverlap">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btt"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/nouvelle_harmonisation"
            android:textColor="#000000"
            android:textSize="20sp"
            android:typeface="serif"
            tools:ignore="RelativeOverlap">

        </TextView>



</RelativeLayout>